fixed bug that caused tiles to not overflow

--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ h1, h2, h3, h4, h5{
     display: grid;
     width: 100%; height: 100vh;
     overflow: scroll;
-    grid-template-columns: repeat(4, 300px);
-    grid-template-rows: repeat(2, 400px);
+    grid-auto-flow: row;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 300px));
+    grid-template-rows: repeat(auto-fill, 400px);
 }
 
 .add-book{
